Deploy Hugo site

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta name="robots" content="index, follow">
 <title>My New Hugo Site</title>
 
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="我的個人部落格">
+<meta name="author" content="您的名字">
 <link rel="canonical" href="https://francisegg.github.io/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.45e028aa8ce0961349adf411b013ee39406be2c0bc80d4ea3fc04555f7f4611a.css" integrity="sha256-ReAoqozglhNJrfQRsBPuOUBr4sC8gNTqP8BFVff0YRo=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://francisegg.github.io/favicon.ico">
@@ -20,6 +20,7 @@
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="https://francisegg.github.io/index.xml">
+<link rel="alternate" type="application/json" href="https://francisegg.github.io/index.json">
 <link rel="alternate" hreflang="en" href="https://francisegg.github.io/">
 <noscript>
     <style>
@@ -60,11 +61,12 @@
 </noscript><meta property="og:url" content="https://francisegg.github.io/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
+  <meta property="og:description" content="我的個人部落格">
   <meta property="og:locale" content="en-us">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="My New Hugo Site">
-<meta name="twitter:description" content="">
+<meta name="twitter:description" content="我的個人部落格">
 
 <script type="application/ld+json">
 {
@@ -72,10 +74,10 @@
   "@type": "Organization",
   "name": "My New Hugo Site",
   "url": "https://francisegg.github.io/",
-  "description": "",
+  "description": "我的個人部落格",
   "logo": "https://francisegg.github.io/favicon.ico",
   "sameAs": [
-      
+      "https://github.com/francisegg", "mailto:bm6hjj2020.tw@gmail.com"
   ]
 }
 </script>
@@ -121,10 +123,52 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="https://francisegg.github.io/posts/" title="文章">
+                    <span>文章</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://francisegg.github.io/archives/" title="歸檔">
+                    <span>歸檔</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://francisegg.github.io/search/" title="搜尋 (Alt &#43; /)" accesskey=/>
+                    <span>搜尋</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
-<main class="main"> 
+<main class="main"><div class="profile">
+    <div class="profile_inner">
+        <img draggable="false" src="https://francisegg.github.io/static/head.jpeg" alt="profile image" title=""
+            height="120" width="120" />
+        <h1>Francis</h1>
+        <span>Student@NTUT</span><div class="social-icons" >
+    <a href="https://github.com/francisegg" target="_blank" rel="noopener noreferrer me"
+        title="Github">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path
+        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+    </path>
+</svg>
+    </a>
+    <a href="mailto:bm6hjj2020.tw@gmail.com" target="_blank" rel="noopener noreferrer me"
+        title="Email">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+    <polyline points="22,6 12,13 2,6"></polyline>
+</svg>
+    </a>
+</div>
+
+    </div>
+</div>
+
     </main>
     
 <footer class="footer">
