--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@
 <meta name="robots" content="index, follow">
 <title>404 Page not found | My New Hugo Site</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="我的個人部落格">
+<meta name="author" content="您的名字">
 <link rel="canonical" href="https://francisegg.github.io/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.45e028aa8ce0961349adf411b013ee39406be2c0bc80d4ea3fc04555f7f4611a.css" integrity="sha256-ReAoqozglhNJrfQRsBPuOUBr4sC8gNTqP8BFVff0YRo=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://francisegg.github.io/favicon.ico">
@@ -58,11 +58,12 @@
 </noscript><meta property="og:url" content="https://francisegg.github.io/404.html">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="404 Page not found">
+  <meta property="og:description" content="我的個人部落格">
   <meta property="og:locale" content="en-us">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="404 Page not found">
-<meta name="twitter:description" content="">
+<meta name="twitter:description" content="我的個人部落格">
 
 </head>
 
@@ -106,6 +107,21 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="https://francisegg.github.io/posts/" title="文章">
+                    <span>文章</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://francisegg.github.io/archives/" title="歸檔">
+                    <span>歸檔</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://francisegg.github.io/search/" title="搜尋 (Alt &#43; /)" accesskey=/>
+                    <span>搜尋</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
